--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             min-height: 100vh;
         }
         header {
-            background-color: #f0f0f0;
+            background-color: #487c50;
             padding: 20px;
             display: flex;
             align-items: center;
@@ -196,7 +196,7 @@
             <img src="https://assets-global.website-files.com/6257adef93867e50d84d30e2/636e0a6a49cf127bf92de1e2_icon_clyde_blurple_RGB.png" alt="Discord Logo" class="footer-logo">
         </a>
         <a href="https://www.roblox.com/communities/34069329/Pindale-Primary-School#!/about" target="_blank">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Roblox_player_icon_black.svg/1200px-Roblox_player_icon_black.svg.png" alt="Roblox Logo" class="footer-logo">
+            <img src="https://cdn.discordapp.com/attachments/1300618355702497340/1335328003269591120/chichester_logo_v1-removebg-preview.png?ex=679fc49d&is=679e731d&hm=fc064263216b10bead859e43f9914912d3886ae27313ddc5118ca2bd24d0ebc0&" alt="Roblox Logo" class="footer-logo">
         </a>
     </footer>
     <script>
